--- a/api_hoco/templates/index.html
+++ b/api_hoco/templates/index.html
@@ -36,7 +36,7 @@
 <ul>
 <li><a href="#cadastra-uma-duvida"><strong>Cadastra uma dúvida</strong></a></li>
 <li><a href="#lista-as-duvidas"><strong>Lista as dúvidas</strong></a></li>
-<li><a href="#remove-uma-dkvida"><strong>Remove uma dúvida</strong></a></li>
+<li><a href="#remove-uma-duvida"><strong>Remove uma dúvida</strong></a></li>
 </ul>
 <h2 id="recupera-o-total-de-creditos-do-aluno">Recupera o total de creditos do aluno</h2>
 <p>Retorna um <em>JSON</em> contendo o número de créditos atual do aluno e o número máximo de créditos necessários no curso.</p>
