--- a/api_hoco/templates/index.html
+++ b/api_hoco/templates/index.html
@@ -107,7 +107,7 @@
     </a>
    </li>
    <li>
-    <a href="#remove-uma-organizaçao-do-curso">
+    <a href="#remove-uma-organizacao-do-curso">
      <strong>
       Remove uma organização do curso
      </strong>
